Coreeção navegação. Novos ataques

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu menuId='menu'>
-      <ion-header>
-        <ion-toolbar>
+    <ion-menu menuId='menu' color="tertiary">
+      <ion-header color="tertiary">
+        <ion-toolbar color="tertiary">
           <ion-title>Perfil</ion-title>
         </ion-toolbar>
       </ion-header>
-      <ion-content>
+      <ion-content color="tertiary">
         <ion-list>
-            <ion-item (click)="editaPerfil()">
+            <ion-item (click)="editaPerfil()" color="tertiary" lines="none" class="nopadding">
               <ion-label>
                 Editar Perfil
               </ion-label>
