--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,3 +4,11 @@
 // styles are for the entire app and not just one component. Additionally, this 
 // file can hold Sass mixins, functions, and placeholder classes to be imported 
 // and used throughout the application.
+
+// #nopadding{
+//     padding-top: 0;
+// }
+// ion-list{
+    
+//     padding-top: 0;
+// }
