--- a/src/app/pages/condicao-pos-luta/condicao-pos-luta.page.scss
+++ b/src/app/pages/condicao-pos-luta/condicao-pos-luta.page.scss
@@ -13,6 +13,8 @@ ion-title{
     text-align: center;
     font-size: 110%; 
     font-weight: bold;
+    width: 80%;
+    margin: auto;
 }
 
 ion-toolbar ion-button{
