--- a/src/app/pages/criar-conta/criar-conta.page.html
+++ b/src/app/pages/criar-conta/criar-conta.page.html
@@ -11,8 +11,8 @@
   
   
   <ion-avatar >
+    <img id="icon" src="./assets/img/Elemento-01.png" alt="">
     <ion-label id="foto">INSERIR<br>FOTO</ion-label>
-    <img id="icon" src="" alt="">
   </ion-avatar>
   
   <form [formGroup]="registroForm"> 
