--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   
 
   <ion-avatar >
-    <img id="icon" src="" alt="">
+    <img id="icon" src="./assets/img/Logo-02.png" alt="">
   </ion-avatar>
   <ion-label >LOGIN</ion-label>
   <form [formGroup]="loginForm">
