--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -23,8 +23,8 @@
     Meus Jogos
   </ion-button> 
   <br>
-  <ion-button (click)="estatistica()"  shape="round" color="tertiary">
-    Minhas <br> estatisticas
+  <ion-button id="bt_minhas_estatisticas" (click)="estatistica()"  shape="round" color="tertiary">
+    Minhas estatisticas
   </ion-button> 
 </ion-content>
 
