--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -1,16 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-button shape="round"  (click)="dismiss()">
-      <ion-icon slot="icon-only" name="arrow-dropleft-circle"></ion-icon>
+<ion-header color="secondary">
+  <ion-toolbar color="secundary">
+    <ion-button id="backButton" fill="clear" (click)="dismiss()">
+      <ion-icon name="ios-arrow-back"></ion-icon>
     </ion-button>
-    
+    <ion-title>OPONENTES</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div id="listAtleta">
-    <ion-list *ngFor="let atleta of listaAtletas.atleta"  >
-      <ion-item (click)='selecionaAtleta(atleta)'>
+<ion-content color="tertiary" >
+  <div id="listAtleta" >
+    <ion-list *ngFor="let atleta of listaAtletas.atleta"  color="tertiary">
+      <ion-item (click)='selecionaAtleta(atleta)' color="tertiary" lines="none">
         <ion-label>{{atleta.nome}}</ion-label>
         <ion-note slot="end">{{atleta.clube}}</ion-note>
       </ion-item>
@@ -24,43 +24,46 @@
   </div>
   
   <div id="registraAtleta">
+    
     <form [formGroup]="regiOpform">
       <ion-list>
-        <ion-item> 
-          <ion-label position="floating" >Nome</ion-label>
+        <ion-label>
+          DADOS DO NOVO OPONENTE
+        </ion-label>
+        <ion-item id="item_nome" lines="none"> 
           <ion-input
+          placeholder= "Nome"
+          text-center
           formControlName="nome"
           type="text"
           [class.invalid]="regiOpform.controls['nome'].valid &&
           regiOpform.controls['nome'].touched">
-          </ion-input>
-          
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Clube</ion-label>
-          <ion-input
-          formControlName="clube"
-          type="text"
-          [class.invalid]="regiOpform.controls['clube'].valid &&
-          regiOpform.controls['clube'].touched"
-          >
-          </ion-input>
-        </ion-item>
-      </ion-list>
+        </ion-input>
+        
+      </ion-item>
+      <ion-item lines="none">
+        <ion-input
+        text-center
+        placeholder="Clube"
+        formControlName="clube"
+        type="text"
+        [class.invalid]="regiOpform.controls['clube'].valid &&
+        regiOpform.controls['clube'].touched"
+        >
+      </ion-input>
+    </ion-item>
+  </ion-list>
   
-    </form>
+</form>
 <ion-button
-expand="block"
+shape="round"
+color="secondary"
 (click)="cadastroAtletaas(regiOpform)"
+
 >
+<!-- [disabled]="!registroForm.valid" -->
 Confirmar
 </ion-button>
-
-<ion-fab vertical="bottom" horizontal="start" slot="fixed">
-  <ion-fab-button (click)="escolheAtleta()">
-    <ion-icon name="arrow-dropright"></ion-icon>
-  </ion-fab-button>
-</ion-fab>
 
 </div>
 
