--- a/src/app/pages/auto-avaliacao/auto-avaliacao.page.html
+++ b/src/app/pages/auto-avaliacao/auto-avaliacao.page.html
@@ -1,61 +1,77 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Auto avaliacao</ion-title>
+  <ion-toolbar color="primary">
+    <ion-button id="backButton" fill="clear" (click)="voltar()">
+      <ion-icon name="ios-arrow-back"></ion-icon>
+    </ion-button>
+    <ion-title>Auto-avaliacao</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> 
 
-<ion-content>
+<ion-content color='tertiary'>
   
-  <ion-label class="titulo" >Confiante</ion-label>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="rangeConfiante($event)">
-      <ion-label slot="start">Pouco</ion-label>
-      <ion-label slot="end">Muito</ion-label>
-    </ion-range>
-  </ion-item>
-  
-  <ion-label class="titulo"  >Estressado</ion-label>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="rangeEstressado($event)">
+  <ion-item class="titulo" lines="none">
+    <ion-label>Confiante</ion-label>
+  </ion-item> 
+  <ion-item class="item_range" lines="none">
+    <ion-range min="1" max="3" step="1" snaps="true" (ionChange)="rangeConfiante($event)"mode="ios">
       <ion-label slot="start">Pouco</ion-label>
       <ion-label slot="end">Muito</ion-label>
     </ion-range>
   </ion-item>
   
-  <ion-label  class="titulo">Focado/Alerta</ion-label>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="rangeFocado($event)">
+  <ion-item class="titulo" lines="none">
+    <ion-label >Estressado</ion-label>
+  </ion-item>
+  <ion-item class="item_range" lines="none">
+    <ion-range min="1" max="3" step="1" snaps="true" (ionChange)="rangeEstressado($event)"mode="ios">
       <ion-label slot="start">Pouco</ion-label>
       <ion-label slot="end">Muito</ion-label>
     </ion-range>
   </ion-item>
-
-  <ion-label class="titulo">Motivado/Comprometido</ion-label>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="rangeMotivado($event)">
+  
+  <ion-item class="titulo" lines="none"mode="ios">
+    <ion-label>Focado/Alerta</ion-label>
+  </ion-item>
+  <ion-item class="item_range" lines="none">
+    <ion-range min="1" max="3" step="1" snaps="true"(ionChange)="rangeFocado($event)"mode="ios">
       <ion-label slot="start">Pouco</ion-label>
       <ion-label slot="end">Muito</ion-label>
     </ion-range>
   </ion-item>
-
-  <ion-label class="titulo">Controlado</ion-label>
-  <ion-item>
-      <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="rangeControlado($event)">
-        <ion-label slot="start">Pouco</ion-label>
-        <ion-label slot="end">Muito</ion-label>
-      </ion-range>
+  
+  <ion-item class="titulo" lines="none">
+    <ion-label>Motivado/Comprometido</ion-label>
   </ion-item>
-
-  <ion-label   class="titulo">Disciplinado/Planejado</ion-label>
-  <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="rangeDisciplinado($event)">
+  <ion-item class="item_range" lines="none">
+    <ion-range min="1" max="3" step="1" snaps="true" (ionChange)="rangeMotivado($event)"mode="ios">
       <ion-label slot="start">Pouco</ion-label>
       <ion-label slot="end">Muito</ion-label>
     </ion-range>
   </ion-item>
-  <ion-button (click)="cadastro()" expand="block">
-    <!-- [disabled]="!valido"> -->
+  
+  <ion-item class="titulo" lines="none">
+    <ion-label>Controlado</ion-label>
+  </ion-item>
+  <ion-item class="item_range" lines="none">
+    <ion-range min="1" max="3" step="1" snaps="true" (ionChange)="rangeControlado($event)"mode="ios">
+      <ion-label slot="start">Pouco</ion-label>
+      <ion-label slot="end">Muito</ion-label>
+    </ion-range>
+  </ion-item>
+  
+  <ion-item class="titulo" lines="none">
+    <ion-label>Disciplinado/Planejado</ion-label>
+  </ion-item>
+  <ion-item class="item_range" lines="none">
+    <ion-range min="1" max="3" step="1" snaps="true" (ionChange)="rangeDisciplinado($event)"mode="ios">
+      <ion-label slot="start">Pouco</ion-label>
+      <ion-label slot="end">Muito</ion-label>
+    </ion-range>
+  </ion-item>
+  
+  
+  <ion-button id="botao_confirmar" shape="round" color="secondary" (click)="cadastro()" mode="ios">
     Confirma
- </ion-button>
- 
+  </ion-button>
+  
 </ion-content>
