--- a/src/app/pages/caracteristicas-oponente/caracteristicas-oponente.page.scss
+++ b/src/app/pages/caracteristicas-oponente/caracteristicas-oponente.page.scss
@@ -1,14 +1,78 @@
+ion-toolbar{
+    --padding-top: 15%;
+    padding-bottom: 5%;
+    color: white;
+    white-space: nowrap;
+}
+
+ion-title{
+    text-align: center;
+    font-size: 110%; 
+    font-weight: bold;
+    width: 80%;
+    margin: auto;
+}
+
+ion-toolbar ion-button{
+    position: absolute;
+    margin-top: -2%;
+    --padding-start : 20%;
+    color: white;   
+    font-size: 130%;  
+}
+
+ion-content{
+    text-align: center; 
+}
+
+ion-content ion-button{ 
+    --color: var(--ion-color-primary);
+    --background: var(--ion-color-tertiary);
+    --border-color: var(--ion-color-primary);
+    --border-style: solid ;
+    font-weight: 900;
+    --padding-top: 10%;
+    --padding-bottom: 10%;
+    width: 32%;
+    margin-top: 3%;
+    font-size: 80%;
+}
+#nivel_tecnico_intermediario{
+    width: 38%;
+}
+ion-label{
+    text-transform: uppercase;
+}
+hr{
+    border-top: 2px solid black;
+    margin-top: 4%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 .movimento{
     font-size: 65%;
     width: 100%;
 }
 .foto{
-    border: 20px !important;
-    border-color: blueviolet;
+    // border: 20px !important;
+    // border-color: blueviolet;
 
 }
 
 .tatica{
-display: flex;
-flex-wrap: wrap;
+// display: flex;
+// flex-wrap: wrap;
+}
+#nivel_tecnico{
+//     text-align: center; 
+// display: flex;
+// flex-wrap: wrap;
+}
+#botao_confirmar{
+    position: absolute;
+    // padding: blue;
+    bottom: 2%;
+    margin-left: -17%;
+    --border-style: none;
+
 }
