--- a/src/app/pages/criar-conta/criar-conta.page.scss
+++ b/src/app/pages/criar-conta/criar-conta.page.scss
@@ -9,11 +9,11 @@
     }
     
     ion-title{
-        // margin-top: 3%;
-        // margin-bottom: 3%; 
         text-align: center;
         font-size: 110%; 
         font-weight: bold;
+        width: 80%;
+        margin: auto;
     }
     
     ion-toolbar ion-button{
@@ -38,15 +38,20 @@
         max-width: 200px !important;  //any size
         max-height: 200px !important; //any size 
         margin: auto;
-        margin-top: 10%;
-        margin-bottom: 15%;
+        margin-top: 3%;
+        margin-bottom: 10%;
+        
     }
-    
+    ion-avatar>ion-label{           
+        display:block;
+        
+        margin-top: -62%;
+    }
     
     ion-item{
         width: 70%;
         border-radius: 30px;
-        margin: auto;
+        margin: auto; 
         margin-top: 3%;
     }
     
@@ -60,7 +65,7 @@
         border-radius: 30px;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 30%;
+        margin-top: 25%;
     }
     
     
