--- a/src/app/pages/luta/luta.page.scss
+++ b/src/app/pages/luta/luta.page.scss
@@ -14,16 +14,20 @@ ion-toolbar{
     position: absolute;
     margin-top: -4%;
     right: 0%;
+    --background: var(--ion-color-secondary);
 }
 .concluir-popup{
   --background: var(--ion-color-secondary);
 }
 
-
 .labels{
-    margin-top: 5%;
+    margin-top: -3%;
     text-align: center;
     font-size: 120%; 
+}
+
+#grid_pontos_lutadores{
+  margin-top: -3%;
 }
 
 ion-item{
@@ -39,6 +43,7 @@ ion-item{
 ion-item div.item-native{
   border-bottom-width: 0px;
 }
+
 .pontosLutadores{
   background: var(--ion-color-secondary);
   border-radius: 30px;
@@ -61,6 +66,7 @@ ion-item div.item-native{
 
  width: 40%;
  text-align: center;
+ padding: 0.5%;
 //  margin-left: -3%;
 //  margin-right: 10%;
 }
@@ -95,6 +101,14 @@ ion-item div.item-native{
   margin-left: -13%;
 }
 
+#ataque5{
+  margin-right: -13%;
+}
+
+#ataque6{
+  margin-left: -13%;
+}
+
 .toqueduplocol{
 
   text-align: center;
@@ -108,10 +122,10 @@ ion-item div.item-native{
 
 .arena>ion-grid{
     height: 20%;
-    // text-align: center;
+    margin-left: 7%;
 }
 .arena>ion-grid>ion-row{
-  margin-left: -2%;
+  // margin-left: 5%;
   width: 80%;
   margin: auto;
 }
@@ -335,5 +349,8 @@ ion-item div.item-native{
     height: 40%;
     clip-path: url(#svgpedireito2);
   
+  }
+  #botao_trocar_lados{
+    color:  var(--ion-color-primary);
   }
   
