--- a/src/app/pages/minhas-lutas/minhas-lutas.page.html
+++ b/src/app/pages/minhas-lutas/minhas-lutas.page.html
@@ -1,53 +1,90 @@
-<ion-header>
-    <ion-toolbar>
-      <ion-button shape="round" (click)="voltar()">
-        <ion-icon name="arrow-dropleft-circle"></ion-icon>
-      </ion-button>
-      <ion-button shape="round" class="Filtro"(click)="presentModal()">
-        <ion-icon name="funnel"></ion-icon>
-      </ion-button>
-    </ion-toolbar> 
-  </ion-header>  
 
-<ion-content padding>  
+<ion-header >
+  <ion-toolbar color="primary">
+    <ion-button id="backButton" fill="clear" (click)="voltar()">
+      <ion-icon name="ios-arrow-back"></ion-icon>
+    </ion-button>
+    <ion-title>MEUS JOGOS</ion-title>        
+    <ion-button fill="clear" id="Filtro"(click)="presentModal()">
+      <ion-icon name="funnel"></ion-icon>
+    </ion-button>
+  </ion-toolbar> 
+</ion-header>  
+
+<ion-content color="tertiary">  
   <div id="lutas">   
     
     <div class="luta" *ngFor="let lutadores of lutaVisao">
       
-      <p class="trap"> 
-        {{lutadores.tipoJogo}}
-      </p>
-      <p class="trap" id="etapaCampeonato" *ngIf="lutadores.etapaCampeonato">  
-        {{lutadores.etapaCampeonato}}
-      </p>
-      <p class="trap" id="etapaEliminatoria" *ngIf="lutadores.etapaEliminatoria"> 
-        {{lutadores.etapaEliminatoria}}
-      </p>
+      <ion-label class="trap" id="etapaEliminatoria" *ngIf="lutadores.Jogo.etapaEliminatoria"> 
+        {{lutadores.Jogo.etapaEliminatoria}}
+      </ion-label>
+      <ion-label class="trap" id="etapaCampeonato" *ngIf="lutadores.Jogo.etapaCampeonato">  
+        {{lutadores.Jogo.etapaCampeonato}}
+      </ion-label>
+      <ion-label class="trap" id="tipo_jogo"> 
+        {{lutadores.Jogo.tipoJogo}}
+      </ion-label>
+      
       <ion-card (click)="selecionaLuta(lutadores.idLuta)">
-        <ion-card-header  >
-          <ion-card-subtitle>            
-            <ion-toolbar>
-              <ion-label>
-                {{lutadores.data}}
-              </ion-label>
-              <ion-label class="hora">
-                {{lutadores.hora}}
-              </ion-label>
-            </ion-toolbar>            
-            {{lutadores.clube1}}  X  {{lutadores.clube2}}
-            </ion-card-subtitle>
-          <ion-card-title>{{lutadores.nome1}} X {{lutadores.nome2}}</ion-card-title>
+        <ion-card-header >
+          <ion-card-subtitle >              
+            <ion-toolbar color="primary">
+              <ion-grid>
+                <ion-row>
+                  <ion-col id="data">{{lutadores.Jogo.data}}</ion-col>
+                  <ion-col id="hora">{{lutadores.Jogo.hora}}</ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-toolbar>
+            <ion-grid>
+              <ion-row>
+                <ion-col id="col_meu_clube">{{userProfile.clube}}</ion-col>            
+                <ion-col id="col_clube_oponente">{{lutadores.Perfil_Adversario.clube2}}</ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-subtitle>
+          <ion-card-title>
+            <ion-grid class="grid_nome_jogadores">
+              <ion-row>
+                <ion-col size="5.5" id="col_meu_nome" >{{userProfile.nome}}</ion-col>
+                <ion-col size="1" id="col_x">X</ion-col>
+                <ion-col size="5.5" id="col_nome_oponente" >{{lutadores.Perfil_Adversario.nome2}}  </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-title>
         </ion-card-header>
-          <ion-list>
-            <ion-item>
-              <ion-label>Punhos:{{lutadores.punho1}}  X  {{lutadores.punho2}}</ion-label>
-            </ion-item>
-            <ion-item>
-              <ion-label>Altura:{{lutadores.altura_relativa}}</ion-label>
-            </ion-item>
-          </ion-list>
+        <ion-grid id="info">
+          <ion-row>
+            <ion-col>
+              <ion-label>Punhos</ion-label>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>
+              <ion-label>Destro</ion-label>
+            </ion-col>
+            <ion-col>
+              <ion-label>X</ion-label>
+            </ion-col>
+            <ion-col id="col_punho_oponente">
+              <ion-label>{{lutadores.Perfil_Adversario.preferencia_manual}}</ion-label>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>
+              <ion-label>Altura</ion-label>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col>
+              <ion-label>{{lutadores.Perfil_Adversario.altura_relativa}}</ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+        
       </ion-card> 
     </div>
   </div>
-
+  
 </ion-content>
