--- a/src/app/pages/profileedit/profileedit.page.scss
+++ b/src/app/pages/profileedit/profileedit.page.scss
@@ -1,4 +1,29 @@
+ion-toolbar{
+    --padding-top: 15%;
+    padding-bottom: 5%;
+    color: white;
+    white-space: nowrap;
+}
 
+ion-title{
+    text-align: center;
+    font-size: 110%; 
+    font-weight: bold;
+    width: 80%;
+    margin: auto;
+}
+
+ion-toolbar ion-button{
+    position: absolute;
+    margin-top: -2%;
+    --padding-start : 20%;
+    color: white;   
+    font-size: 130%;  
+}
+
+ion-content{
+    text-align: center; 
+}
 .camera{
     width: 100%;
     height: 50%;
