--- a/src/app/pages/registra-lutadores/registra-lutadores.page.scss
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.scss
@@ -4,19 +4,19 @@ ion-toolbar{
     color: white;
     white-space: nowrap;
 
-}
+} 
 
 ion-title{
-    // margin-top: 3%;
-    // margin-bottom: 3%; 
     text-align: center;
     font-size: 110%; 
     font-weight: bold;
+    width: 80%;
+    margin: auto;
 }
 
 ion-toolbar ion-button{
     position: absolute;
-    margin-top: -2%;
+    margin-top: -2%; 
     --padding-start : 20%;
     color: white;   
     font-size: 130%;  
@@ -69,6 +69,7 @@ ion-header{
 ion-list{
     padding-bottom: 0;
     padding-top:0;
+    margin-bottom: 2%;
 }
 
 h6{ 
@@ -87,36 +88,35 @@ hr{
     margin-left: 10%;
     margin-right: 10%;
 }
-ion-list{
- margin-bottom: 2%;
-}
 
 ion-item ion-label{
     margin-top: 0;
 }
 
-ion-label ion-label {
-    text-align: center;
-    margin: auto;
-    margin-top: 4%;
-    padding-top: 3%;
-    padding-bottom: 3%;
-    border-radius: 30px;
-    background: white;
-    width: 80%;
-    font-size: 140%;
-    font-family:"Noto Serif"; 
-    font-weight: 900;
-}
+  
 
 #raking_oponente_poule>ion-button{
+
     margin-top: 2%;
     margin-right: 3%; 
+}
+
+#raking_oponente_poule{    
+    position: absolute;
+    bottom: 10%;
+    margin-left: 10%;
+
 }
 
 #class_oponente_eliminatoria>ion-button{
     margin-top: 4%;
     margin-right: 3%; 
+}
+
+#class_oponente_eliminatoria{
+    position: absolute;
+    bottom: 10%;
+    margin-left: 3%; 
 }
 
 #botao_confirmar{
