alterada posição botão remessa e alterada alternação de cores
incluída cor amarela quartiary para ser usada na remessa e também pode ser usada para destacar outras informações.

--- a/src/app/pages/luta/luta.page.scss
+++ b/src/app/pages/luta/luta.page.scss
@@ -106,8 +106,14 @@ ion-item div.item-native{
 }
 
 #ataque6{
+  --border-color: var(--ion-color-quartiary);
+  color: var(--ion-color-quartiary);
+}
+
+#ataque7{
   margin-left: -13%;
 }
+
 
 .toqueduplocol{
 
