--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,6 +31,9 @@
   // --ion-color-tertiary-shade: #633ce0;
   // --ion-color-tertiary-tint: #7e57ff;
 
+  /** quartiary **/
+  --ion-color-quartiary: #ECA72C;
+
   /** success **/
   --ion-color-success: #10dc60;
   --ion-color-success-rgb: 16, 220, 96;
