Primeira versão para celular

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -42,6 +42,9 @@ ion-avatar{
     max-width: 300px !important;  //any size
     max-height: 300px !important; //any size 
     margin: auto;
-    margin-top: 30%;
+    margin-top: 20%;
     margin-bottom: 15%;
+}
+form{
+    margin-top: -10%;
 }
