--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -10,17 +10,14 @@ ion-button{
     border-radius: 30px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 3%;
+    margin-top: 10px;
 }
 
 ion-input{
     color: var(--ion-color-primary)!important;
-    font-size: 130%;
+    font-size: 1.1rem;
 }
 
-ion-label{
-    font-weight: bold;
-}
 ion-content{
     text-align: center; 
 }
@@ -32,19 +29,27 @@ ion-content{
     --border-style: solid ;
 }
 
-#criarConta{
-    margin-top: 20%;
+#criarContaDiv {
+    width: 100%;
+    margin: 0 auto;
+    position: fixed;
+    bottom: 30px;
 }
 
-ion-avatar{
-    width:   100% !important;  
-    height : 100% !important;  
-    max-width: 300px !important;  //any size
-    max-height: 300px !important; //any size 
-    margin: auto;
-    margin-top: 20%;
-    margin-bottom: 15%;
+@media (max-height: 480px) {
+    #criarContaDiv {
+        position: static;
+    }
 }
+
+#icon{
+    max-width: 100%; 
+    max-height: 45vh; 
+    margin: auto;
+    margin-top: 15px;
+    --border-radius: 0;
+}
+
 form{
-    margin-top: -10%;
+    margin-top: 5px;
 }
