--- a/src/app/pages/luta/luta.page.scss
+++ b/src/app/pages/luta/luta.page.scss
@@ -193,6 +193,9 @@ ion-item div.item-native{
     // margin-left: 2%;
     width: 45%;
     height: 40%;
+    // width: inherit;
+    // height: inherit;
+
     clip-path: url(#cab1);
   }
   
