--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -22,7 +22,10 @@ ion-label{
     font-weight: bold;
 }
 ion-content{
-    text-align: center; 
+    text-align: center;
+    // --
+    width: 100%;
+    height: 100%; 
 }
 
 #logar{
